The last commit
Add autoRecalculate, correct some mistakes and clean code

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -19,6 +19,7 @@
         <file>icons/avoutQtHelp.png</file>
         <file>icons/title.png</file>
         <file>icons/closeFile.png</file>
+        <file>icons/autoRecalculateOptions.png</file>
     </qresource>
     <qresource prefix="/splashScreen">
         <file>splashScreen/splash.jpg</file>
